Fixed hover contrast on nav

--- a/01-dude-ranch/css/small.css
+++ b/01-dude-ranch/css/small.css
@@ -55,7 +55,7 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #85531B;
+    background-color: #6E6E6E;
 }
 
 /* Main */
